--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/AuditSinkGlobalPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/AuditSinkGlobalPropertiesDialog.form
@@ -3,12 +3,12 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="6" left="6" bottom="6" right="6"/>
     <constraints>
-      <xy x="20" y="20" width="420" height="123"/>
+      <xy x="20" y="20" width="420" height="126"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="632a2" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="632a2" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -30,6 +30,14 @@
             </constraints>
             <properties>
               <text value="Save audit records to Gateway &amp;database"/>
+            </properties>
+          </component>
+          <component id="fe21e" class="javax.swing.JButton" binding="configureButton" default-binding="true">
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Configure"/>
             </properties>
           </component>
         </children>
